# mccpp

./: .gitignore  CMakeLists.txt  dev-clean.sh  dev-configure.sh  dev-test.sh
assets/mccpp/shaders/: basic.frag  basic.vert
generator/: ArticData.cmake  CMakeLists.txt  block_states.py  packet_types.py  regenerate.py  utils.py
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  PerlinNoise.hpp  application.cc  application.hh  cvar.cc  cvar.hh  game.cc  game.hh  identifier.hh  logger.cc  logger.hh  main.cc  nbt.cc  nbt.hh  renderer.cc  renderer.hh  uuid.hh
src/client/: .gitignore  CMakeLists.txt  client.cc  client.hh  handler.cc  handler.hh  handlers.cc  handlers.hh
src/client/handlers/login/: custom_query_packet.cc  game_profile_packet.cc  hello_packet.cc  login_compression_packet.cc
src/client/handlers/play/: custom_payload_packet.cc  keep_alive_packet.cc  level_chunk_with_light_packet.cc  login_packet.cc
src/client/handlers/status/: CMakeLists.txt  pong_response_packet.cc  status_response_packet.cc
src/data/: block.hh  block_impl.hh
src/input/: CMakeLists.txt  input.cc  input.hh
src/proto/: CMakeLists.txt  client.cc  client.hh  decode_exception.hh  exceptions.hh  packet.cc  packet.hh  tcp_client.cc  tcp_client.hh  varint.hh
src/proto/clientbound/: packets.hh
src/proto/clientbound/status/: pong_response_packet.hh  status_response_packet.hh
src/proto/serverbound/: packets.hh
src/proto/serverbound/handshaking/: client_intention_packet.hh
src/renderer/: CMakeLists.txt  renderer.cc  renderer.hh  shader.cc  shader.hh  vertex.hh
src/resource/: CMakeLists.txt  block_state.cc  block_state.hh  manager.cc  manager.hh  model.cc  model.hh  resource.cc  resource.hh  shader.cc  shader.hh  texture.cc  texture.hh
src/resource_v2/: resource.cc  resource.hh
src/utility/: coro.hh  extract_bits.hh  format.hh  misc.hh  ring_buffer.hh  runtime_array.hh  scope_guard.hh
src/vfs/: CMakeLists.txt  host.cc  host.hh  vfs.cc  vfs.hh
src/world/: CMakeLists.txt  chunk.cc  chunk.hh  world.hh
test/: CMakeLists.txt
test/client/: extract_bits.cc
test/proto/: varint.cc
(+7 files in other folders)
